# airas-20251106-143430-matsuzawa

./: pyproject.toml
.research/: research_history.json
.research/prompt/create_code_subgraph/: generate_experiment_code.txt  generate_run_config.txt  validate_experiment_code.txt
.research/prompt/create_experimental_design_subgraph/: generate_experiment_design.txt
.research/prompt/create_hypothesis_subgraph/: evaluate_novelty_and_significance.txt  generate_hypothesis.txt
.research/prompt/generate_queries_subgraph/: generate_queries.txt
config/: config.yaml
config/run/: comparative-1-DeBERTa-v3-base-86M--GLUE-MNLI.yaml  proposed-DeBERTa-v3-base-86M--GLUE-MNLI.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
